test/langtools/tools/javac/patterns/PatternVariablesAreFinal.out
PatternVariablesAreFinal.java:11:13: compiler.err.pattern.binding.may.not.be.assigned: s
- compiler.note.preview.filename: PatternVariablesAreFinal.java, DEFAULT
- compiler.note.preview.recompile
1 error
